Fix SkipIfEqual on AArch64 and RISC-V

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 20
    • Affects Version/s: 20
    • Component/s: hotspot
    • None
    • b24
    • aarch64, riscv
    • generic

      SkipIfEqual was supposed to load a flag value from some memory, compare it with a input boolean value, and jump to a specific label they a equals. The implementation on x86 and s390 platforms meets expectations, and ppc uses SkipIfEqualZero. However, on AArch64 and RISC-V platforms, the input argument "value" is not used, and jumping-if-equal-zero is generated only. That's not correct, but works well since only false passed on all call sites so far.

            Assignee:
            Yadong Wang
            Reporter:
            Yadong Wang
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: