8296630: Fix SkipIfEqual on AArch64 and RISC-V

Reviewed-by: ngasson, fyang, luhenry, aph